--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
 
-    <img src="images/joeyy.jpeg"
+    <img src="joeyy.jpeg"
     height = "200" width = "200">
     <h1>hey</h1>
 
