--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
 
     <img src="joeyy.jpeg"
-    height = "200" width = "200">
+    height = "400">
     <h1>hey</h1>
 
     <a href="https://www.instagram.com/jxxyy/?hl=en"
